--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Data Scientist</title>
+    <title>Your Full Name - Data Scientist</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -29,6 +29,15 @@
             color: #777;
         }
 
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            margin-bottom: 10px;
+        }
+
         .project {
             margin-bottom: 20px;
         }
@@ -44,16 +53,16 @@
 <body>
 
     <header>
-        <h1>Your Name</h1>
+        <h1>Your Full Name</h1>
         <p>Data Scientist</p>
     </header>
 
-    <section id="summary">
-        <h2>Summary</h2>
+    <section id="objective">
+        <h2>Objective</h2>
         <p>
-            Experienced and results-driven Data Scientist with a proven track record in data science, analytics, and
-            mathematics. Adept at guiding high-performing teams, implementing strategic initiatives, and driving
-            successful projects. International work experience in South Asia, North America, and the Middle East.
+            As an experienced and results-driven Data Scientist, I am seeking opportunities to contribute my expertise in
+            [specific areas of data science, e.g., machine learning, data analysis] to a dynamic and innovative team. I am
+            passionate about leveraging data to drive actionable insights and impact business outcomes.
         </p>
     </section>
 
@@ -65,7 +74,10 @@
             <li>Machine Learning: Scikit-learn, TensorFlow, Keras</li>
             <li>Big Data: Apache Spark (Intermediate)</li>
             <li>Database Management: SQL</li>
-            <!-- Add more skills as needed -->
+            <li>Tools & Platforms: Jupyter Notebooks, Git, Docker</li>
+            <li>Cloud Services: AWS (Intermediate), Google Cloud Platform (Beginner)</li>
+            <li>Statistical Analysis: Hypothesis Testing, Regression Analysis</li>
+            <li>Soft Skills: Analytical Thinking, Communication, Team Collaboration</li>
         </ul>
     </section>
 
@@ -87,10 +99,79 @@
         <!-- Add more projects as needed -->
     </section>
 
+    <section id="code-samples">
+        <h2>Code Samples</h2>
+        <pre>
+<code>
+# Insert relevant code snippets with comments explaining the functionality.
+</code>
+        </pre>
+    </section>
+
+    <section id="case-studies">
+        <h2>Case Studies</h2>
+        <div class="case-study">
+            <h3>Case Study 1: Project Impact</h3>
+            <p><strong>Problem:</strong> Describe the problem you addressed in one of your projects.</p>
+            <p><strong>Approach:</strong> Explain your approach, challenges faced, and the solution.</p>
+            <p><strong>Outcome:</strong> Highlight the impact of your solution.</p>
+        </div>
+        <!-- Add more case studies as needed -->
+    </section>
+
+    <section id="education">
+        <h2>Education</h2>
+        <ul>
+            <li>Master of Science in Computer Science</li>
+            <ul>
+                <li>Southern Illinois University, USA</li>
+                <li>Thesis: Application of Multi-Layer Self-Organizing Maps (SOM) on Analyzing Facebook Activities</li>
+            </ul>
+
+            <li>Master of Science in Mathematics</li>
+            <ul>
+                <li>Sharif University of Technology, Iran</li>
+                <li>Thesis: Defining Sets in Combinatorics</li>
+            </ul>
+
+            <li>Bachelor of Science in Mathematics</li>
+            <ul>
+                <li>Isfahan University of Technology, Iran</li>
+            </ul>
+        </ul>
+    </section>
+
+    <section id="certifications">
+        <h2>Certifications</h2>
+        <ul>
+            <li>Harvard Business School Online, CORe</li>
+            <ul>
+                <li>Business Analytics, Economics for Managers, Financial Accounting</li>
+            </ul>
+
+            <li>LinkedIn Learning Certificates</li>
+            <ul>
+                <li>Spark for Machine Learning & AI</li>
+                <li>Data Science on Google Cloud Platform: Architecting Solutions</li>
+                <li>Data Science on Google Cloud Platform: Predictive Analytics</li>
+            </ul>
+        </ul>
+    </section>
+
+    <section id="work-experience">
+        <h2>Work Experience</h2>
+        <div class="job">
+            <p><strong>[Current or Previous Job Title]</strong></p>
+            <p><strong>Company Name, Location | Date Started - Date Ended</strong></p>
+            <p>Key responsibilities and achievements.</p>
+        </div>
+        <!-- Add more work experiences as needed -->
+    </section>
+
+    <section id="references">
+        <h2>References</h2>
+        <p>Available upon request.</p>
+    </section>
+
     <footer>
-        &copy; 2023 Your Name | <a href="https://github.com/yourusername" target="_blank">GitHub</a>
-    </footer>
-
-</body>
-
-</html>
+        &copy; 2023 Your Full Name | <a href="https://github.com/yourusername"
