--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Full Name - Data Scientist</title>
+    <title>Laleh Asadzadeh - Data Scientist</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -75,7 +75,7 @@
             <li>Big Data: Apache Spark (Intermediate)</li>
             <li>Database Management: SQL</li>
             <li>Tools & Platforms: Jupyter Notebooks, Git, Docker</li>
-            <li>Cloud Services: AWS (Intermediate), Google Cloud Platform (Beginner)</li>
+            <li>Cloud Services: AWS (Beginner), Google Cloud Platform (Beginner), Microsoft Azure (Intermediate)</li>
             <li>Statistical Analysis: Hypothesis Testing, Regression Analysis</li>
             <li>Soft Skills: Analytical Thinking, Communication, Team Collaboration</li>
         </ul>
@@ -84,20 +84,24 @@
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <h3>Project Name 1</h3>
-            <p>Brief description of the project, including the problem addressed, your role, and the impact.</p>
-            <p>Technologies Used: Python, Scikit-learn, Pandas, Jupyter Notebooks</p>
-            <a href="#">Link to Project</a>
+            <h3>Autonomous ETL and Data Analytics</h3>
+            <p>Utilized Large Language Models for automated data selection, analysis, and visualization.</p>
+            <p>Technologies Used: Python, LangChain, OpenAI, CamelAGI, Prompt Engineering, Pinecone VectorDB, Docker, Microsoft Azure</p>
         </div>
 
         <div class="project">
-            <h3>Project Name 2</h3>
-            <p>Brief description of the project, including the problem addressed, your role, and the impact.</p>
-            <p>Technologies Used: Python, TensorFlow, Keras, Matplotlib</p>
-            <a href="#">Link to Project</a>
+            <h3>Aircraft Turnaround Risk Management</h3>
+            <p>Implementing Object Detection models to Detect risk of delay in aircraft turnaround process using the video stream and creating dashboards.</p>
+            <p>Technologies Used: Python, OpenCV, PyTorch, FastAPI, Docker, Microsoft Azure, Yolo Models</p>
         </div>
-        <!-- Add more projects as needed -->
-    </section>
+
+        <div class="project">
+            <h3>Cohort Churn Analysis</h3>
+            <p>Analyzing Mindvalley membership and transaction data to calculate cohort churn and retention.</p>
+            <p>Technologies Used: Python, Pandas, BigQuery, Google Data Studio</p>
+        </div>
+
+            </section>
 
     <section id="code-samples">
         <h2>Code Samples</h2>
