--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     <section id="objective">
         <h2>Objective</h2>
         <p>
-            As an experienced and results-driven Data Scientist, I am seeking opportunities to contribute my expertise in
-            [specific areas of data science, e.g., machine learning, data analysis] to a dynamic and innovative team. I am
-            passionate about leveraging data to drive actionable insights and impact business outcomes.
+            Experienced Senior Data Scientist with a proven track record of leadership in data science, analytics, and mathematics. 
+            Adept at guiding high-performing teams, implementing strategic initiatives, and driving successful projects. 
+            International work experience in South Asia, North America, and the Middle East.
         </p>
     </section>
 
@@ -85,43 +85,48 @@
         <h2>Projects</h2>
         <div class="project">
             <h3>Autonomous ETL and Data Analytics</h3>
-            <p>Utilized Large Language Models for automated data selection, analysis, and visualization.</p>
+            <p>Utilized Large Language Models for automated data selection, analysis, and visualization</p>
             <p>Technologies Used: Python, LangChain, OpenAI, CamelAGI, Prompt Engineering, Pinecone VectorDB, Docker, Microsoft Azure</p>
         </div>
 
         <div class="project">
             <h3>Aircraft Turnaround Risk Management</h3>
-            <p>Implementing Object Detection models to Detect risk of delay in aircraft turnaround process using the video stream and creating dashboards.</p>
+            <p>Implementing Object Detection models to Detect risk of delay in aircraft turnaround process using the video stream and creating dashboards</p>
             <p>Technologies Used: Python, OpenCV, PyTorch, FastAPI, Docker, Microsoft Azure, Yolo Models</p>
         </div>
 
         <div class="project">
             <h3>Cohort Churn Analysis</h3>
-            <p>Analyzing Mindvalley membership and transaction data to calculate cohort churn and retention.</p>
+            <p>Analyzing the company membership and transaction data to calculate cohort churn and retention, create dashboards and share insights with the stakeholders</p>
             <p>Technologies Used: Python, Pandas, BigQuery, Google Data Studio</p>
         </div>
 
-            </section>
-
-    <section id="code-samples">
-        <h2>Code Samples</h2>
-        <pre>
-<code>
-# Insert relevant code snippets with comments explaining the functionality.
-</code>
-        </pre>
-    </section>
-
-    <section id="case-studies">
-        <h2>Case Studies</h2>
-        <div class="case-study">
-            <h3>Case Study 1: Project Impact</h3>
-            <p><strong>Problem:</strong> Describe the problem you addressed in one of your projects.</p>
-            <p><strong>Approach:</strong> Explain your approach, challenges faced, and the solution.</p>
-            <p><strong>Outcome:</strong> Highlight the impact of your solution.</p>
+        <div class="project">
+            <h3>Recommender Engines</h3>
+            <p>Personalized content and user connection recommendations</p>
+            <p>Technologies Used: Python, TensorFlow, keras, BigQuery, Airflow, Kubeflow</p>
         </div>
-        <!-- Add more case studies as needed -->
-    </section>
+
+            </section>
+    <section id="Teaching">
+        <h2>Curriculum Design, Content Creation, Mentorship</h2>
+        <div class="Teaching">
+            <p>Develop customized data science learning paths for clients, including banks and Oil & Gas companies</p>
+            <p>Develop data science use cases tailored to the clients' needs and data, intended for incorporation into their
+                employees' hands-on training programs</p>
+            <p>Developed comprehensive content for the following courses</p>
+            <ul>
+                <li>Supervised/Unsupervised Machine Learning</li>
+                <li>Regression Modeling & Evaluation</li>
+                <li>Time Series Forecasting</li>
+                <li>Inferential Statistics</li>
+                <li>Descriptive Statistics</li>
+            </ul>
+
+            <p>Technologies Used: Python, Jupyter Notebook</p>
+        </div>
+
+        </section>
 
     <section id="education">
         <h2>Education</h2>
@@ -178,4 +183,4 @@
     </section>
 
     <footer>
-        &copy; 2023 Your Full Name | <a href="https://github.com/yourusername"
+        &copy; 2023 Laleh Asadzadeh | <a href="https://github.com/yourusername"
