--- a/index.html
+++ b/index.html
@@ -183,4 +183,4 @@
     </section>
 
     <footer>
-        &copy; 2023 Laleh Asadzadeh | <a href="https://github.com/yourusername"
+        &copy; 2023 Laleh Asadzadeh | <a href="https://github.com/lalehae"
