--- a/pages/Cohort.html
+++ b/pages/Cohort.html
@@ -44,7 +44,7 @@
         <p>With the data in hand, I embarked on a meticulous analytical journey, resulting in the creation of detailed cohort churn tables. 
             These tables not only captured the essence of the churn phenomena but also provided a clear depiction of user engagement over time. 
             To automate and streamline the data analysis process, the data engineering team and I leveraged Apache Airflow, 
-            constructing a robust data pipeline that produced live churn tables segmented by membership type.<p>
+            constructing a robust data pipeline that produced live churn tables segmented by membership type.</p>
         <h2>Visualization and Impact</h2>
         <p>Utilizing the versatility of Google Data Studio, I crafted intuitive dashboards that vividly illustrated the churn trends, 
             offering the marketing team and other stakeholders a compelling visual narrative of the data. The insights garnered from these 
