--- a/pages/Social.html
+++ b/pages/Social.html
@@ -45,7 +45,7 @@
         <p>The system employs cosine similarity measures to ascertain the degree of alignment between users, 
             forging a final similarity score rooted in the depth of their shared attributes. 
             A novel post-processing step is incorporated to ensure diversity in user recommendations by avoiding matches 
-            from the same company.<p>
+            from the same company.</p>
         <h2>Evaluation and Impact</h2>
         <p>Human judgment played an integral role in the evaluation process, providing a qualitative assessment that 
             endorsed the efficacy of the methodology. The approach outperformed traditional clustering methods like k-means, 
