--- a/pages/Aircraft.html
+++ b/pages/Aircraft.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Autonomous ETL & Data Analytics</title>
+    <title>Aircraft Turnaround</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -29,7 +29,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Autonomous ETL & Data Analytics</h1>
+        <h1>Aircraft Turnaround</h1>
         <h2>Objective</h2>
         <p>The Autonomous ETL & Data Analytics project is designed to streamline the utilization of corporate data, particularly for businesses that operate on complex platforms like SAP or possess extensive data archives. This solution is tailored to empower companies by circumventing the intricacies of database knowledge, enabling swift access to vital data insights.</p>
         <h2>Methodology</h2>
