--- a/pages/Aircraft.html
+++ b/pages/Aircraft.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Autonomous ETL & Data Analytics2</title>
+    <title>Autonomous ETL & Data Analytics</title>
     <style>
         body {
             font-family: Arial, sans-serif;
