--- a/pages/Social.html
+++ b/pages/Social.html
@@ -17,6 +17,10 @@
         h1 {
             color: #333;
         }
+        h2 {
+            color: #333;
+            font-size: 1.5em;
+        }
         p {
             color: #666;
             line-height: 1.6;
