--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
 
     <header>
-        <h1>Your Full Name</h1>
+        <h1>Laleh Asadzadeh</h1>
         <p>Data Scientist</p>
     </header>
 
