--- a/pages/Aircraft.html
+++ b/pages/Aircraft.html
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container" style="text-align: justify;">
         <h1>Aircraft Turnaround</h1>
         <h2>Objective</h2>
         <p>The Aircraft Turnaround Project is conceived with the objective of enhancing operational efficiency at airports. This innovative application serves as a strategic tool for airline managers, enabling them to monitor aircraft turnaround activities in real-time. By leveraging this solution, managers can swiftly identify potential delays and optimize resource allocation, thus minimizing the risk of operational disruptions.</p>
