edit html page social

--- a/pages/Cohort.html
+++ b/pages/Cohort.html
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container" style="text-align: justify;">
         <h1>Cohort Churn Analysis</h1>
         <h2>Objective</h2>
         <p>TThe primary aim of the Cohort Churn Analysis initiative was to unearth profound insights into user retention and turnover. 
