add image and change colors Social page

--- a/pages/Social.html
+++ b/pages/Social.html
@@ -20,10 +20,10 @@
             box-shadow: 0 2px 4px rgba(0,0,0,0.1); /* Optional: Adds a subtle shadow around the container */
         }
         h1 {
-            color: #003366; /* Navy Blue for main headings */
+            color:  #00AEEF; /* Navy Blue for main headings */
         }
         h2 {
-            color: #00AEEF; /* Sky Blue for subheadings */
+            color: #FFA500; /* Sky Blue for subheadings */
             font-size: 1.5em;
         }
         p {
@@ -32,7 +32,7 @@
             text-align: justify; /* Justifies the paragraph text */
         }
         a, .highlight {
-            color: #FFA500; /* Vibrant Orange for links and highlighted text */
+            color: #7D5BA6; /* Vibrant Orange for links and highlighted text */
         }
         .highlight-purple {
             background-color: #7D5BA6; /* Soft Purple background for special highlights */
@@ -45,6 +45,7 @@
 <body>
     <div class="container" style="text-align: justify;">
         <h1>Social Media Recommender Engine</h1>
+        <img src="images/Social.png" alt="Project Image" style="display: block; margin: 20px auto; width: 300px; height: 300px;"> 
         <h2>Objective</h2>
         <p>The Social Media Recommender Engine project has been meticulously architected to refine the social connectivity experience. This Proof of Concept (POC) is dedicated to presenting users with their best matches, considering a multitude of factors that include demographic data, professional backgrounds, and personal aspirations. The system is designed to facilitate meaningful connections by aligning users with similar interests and life goals.</p>
         <h2>Methodology</h2>
