--- a/pages/Social.html
+++ b/pages/Social.html
@@ -45,7 +45,7 @@
 <body>
     <div class="container" style="text-align: justify;">
         <h1>Social Media Recommender Engine</h1>
-        <img src="images/Social.png" alt="Project Image" style="display: block; margin: 20px auto; width: 300px; height: 300px;"> 
+        <img src="../images/Social.png" alt="Project Image" style="display: block; margin: 20px auto; width: 300px; height: 300px;"> 
         <h2>Objective</h2>
         <p>The Social Media Recommender Engine project has been meticulously architected to refine the social connectivity experience. This Proof of Concept (POC) is dedicated to presenting users with their best matches, considering a multitude of factors that include demographic data, professional backgrounds, and personal aspirations. The system is designed to facilitate meaningful connections by aligning users with similar interests and life goals.</p>
         <h2>Methodology</h2>
