complete all htmls

--- a/pages/Cohort.html
+++ b/pages/Cohort.html
@@ -4,32 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cohort Churn Analysis</title>
+    <title>Social Media Recommender Engine</title>
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-color: #F4F4F4; /* Light Gray background */
+            color: #333; /* Default text color */
         }
         .container {
             width: 80%;
             margin: 0 auto;
             padding: 20px;
+            background-color: #FFFFFF; /* White background for content */
+            border-radius: 5px; /* Optional: Adds rounded corners to your content container */
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1); /* Optional: Adds a subtle shadow around the container */
         }
         h1 {
-            color: #333;
+            text-align: center;
+            color:  #00AEEF; /* Navy Blue for main headings */
         }
         h2 {
-            color: #333;
+            color: #FFA500; /* Sky Blue for subheadings */
             font-size: 1.5em;
         }
         p {
-            color: #666;
+            color: #666; /* Darker text color for paragraphs for readability */
             line-height: 1.6;
+            text-align: justify; /* Justifies the paragraph text */
+        }
+        a, .highlight {
+            color: #7D5BA6; /* Vibrant Orange for links and highlighted text */
+        }
+        .highlight-purple {
+            background-color: #7D5BA6; /* Soft Purple background for special highlights */
+            color: #FFFFFF; /* White text on purple background */
+            padding: 2px 4px; /* Adds some padding around the text */
+            border-radius: 3px; /* Rounds the corners of the highlight */
         }
     </style>
 </head>
 <body>
     <div class="container" style="text-align: justify;">
         <h1>Cohort Churn Analysis</h1>
+        <img src="../images/Cohort.png" alt="Project Image" style="display: block; margin: 20px auto; width: 300px; height: 300px;"> 
         <h2>Objective</h2>
         <p>TThe primary aim of the Cohort Churn Analysis initiative was to unearth profound insights into user retention and turnover. 
             By scrutinizing the churn rates across various membership tiers, the project sought to empower the company with actionable 
