--- a/pages/Social.html
+++ b/pages/Social.html
@@ -20,6 +20,7 @@
             box-shadow: 0 2px 4px rgba(0,0,0,0.1); /* Optional: Adds a subtle shadow around the container */
         }
         h1 {
+            text-align: center;
             color:  #00AEEF; /* Navy Blue for main headings */
         }
         h2 {
