add two more projects

--- a/pages/Cohort.html
+++ b/pages/Cohort.html
@@ -68,7 +68,7 @@
             dashboards were transformative: the company made the pivotal decision to discontinue a specific membership category, 
             refocusing its resources and strategic efforts on the more promising membership types.</p>
         <h2>Outcome</h2>
-        <p>EThis decisive pivot, informed by the Cohort Churn Analysis, underscored the project's significant 
+        <p>This decisive pivot, informed by the Cohort Churn Analysis, underscored the project's significant 
             influence on the company's approach to membership offerings. By providing a clear, data-driven pathway, 
             the project played a central role in reshaping the 
             company's membership strategy, ultimately enhancing its market position and revenue potential.</p>
