--- a/pages/TREK_AI_Assistant.html
+++ b/pages/TREK_AI_Assistant.html
@@ -50,7 +50,7 @@
 
         <h2>Objective</h2>
         <p>
-            At TREK Geotechnical, engineers work with a mix of structured databases and long technical reports when assessing sites and making design decisions. 
+            At TREK Engineering, engineers work with a mix of structured databases and long technical reports when assessing sites and making design decisions. 
             The objective of this project was to build an AI assistant that could answer complex, multi-step questions over this information in a safe and explainable way, 
             without exposing raw data outside company systems or replacing expert judgement.
         </p>
